# MyRaspberryScanner

src/: CMakeLists.txt  TestMain.cpp
src/Config/: config.h
src/Data/: CMakeLists.txt  data-general.cpp  data-general.h
src/Data/Protobuf/: test.proto
src/QRCode/: CMakeLists.txt  interface-test.hpp  qr-module-base.h  qr-module.cpp  qr-module.h
src/QRCode/PyDecoder/: QRDecoder_python.hpp
src/static/: qrdecoder.py
