cmake_minimum_required(VERSION 3.6)
project(CppProject)
set(Python_ADDITIONAL_VERSIONS 2.7)
FIND_PACKAGE(PythonLibs REQUIRED)
FIND_PACKAGE(Boost 1.62 REQUIRED COMPONENTS system python)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
add_subdirectory(QRCode)
add_subdirectory(Data)
aux_source_directory(. SRC_DIR)
add_executable(main ${SRC_DIR})
target_link_libraries(main QRLib DataLib)
target_link_libraries(main ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})